--- a/files/login/styles.css
+++ b/files/login/styles.css
@@ -274,8 +274,8 @@
 }
 #u141 {
   position:absolute;
-  left:124px;
-  top:490px;
+  left:190px;
+  top:409px;
   width:100px;
   height:60px;
 }
@@ -1038,4 +1038,33 @@
   width:316px;
   visibility:hidden;
   word-wrap:break-word;
+}
+#u194_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:50px;
+  height:50px;
+}
+#u194 {
+  position:absolute;
+  left:150px;
+  top:500px;
+  width:50px;
+  height:50px;
+}
+#u195 {
+  position:absolute;
+  left:2px;
+  top:17px;
+  width:46px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u194_ann {
+  position:absolute;
+  left:193px;
+  top:496px;
+  width:1px;
+  height:1px;
 }
